--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -20,9 +21,11 @@
     "react-hook-form": "^7.45.4",
     "styled-components": "^6.0.7",
     "typescript": "5.1.6",
+    "validator": "^13.11.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "@types/validator": "^13.11.1"
   }
 }
